<resources>
    <string name="app_name">Udacity Play Music</string>
    <string name="splash_screen_name">Play Music</string>
    <string name="desc_app_logo">Application Logo at the time of app launch</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_artists">Top Artists</string>
    <string name="catogery_melody">Melody</string>
    <string name="catogery_edm">EDM</string>
    <string name="play_btn_desc">To launch playing activity</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="thumbnail_image">Thumbnail view for Song image</string>
    <string name="prev_btn">Previous Play Button</string>
    <string name="play_btn">Play Button</string>
    <string name="next_btn">Next Play Button</string>
    <string name="desc_top_songs">This Activity contains Top songs to play</string>
    <string name="desc_top_artists">Contains Top artists songs to play</string>
    <string name="desc_song_playing_activity">This is the main song playing area that shows you which song is currently running</string>
    <string name="desc_home">Play Music</string>
</resources>
