<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <ImageView
        android:id="@+id/song_image_art"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/song_name_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/song_name"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/artist_name_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_name_display"
            android:gravity="center_horizontal"
            android:text="@string/artist_name"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/artist_name_display"
            android:orientation="horizontal">

            <ImageButton

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PreviousSong"
                android:background="#fff"
                android:src="@drawable/previous"
                android:contentDescription="@string/prev_btn" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/play_button"
                android:onClick="PlaySong"
                android:contentDescription="@string/play_btn" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:onClick="NextSong"
                android:src="@drawable/next"
                android:contentDescription="@string/next_btn" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>